--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Project3</string>
+    <string name="vikas">Vikas</string>
+    <string name="enter_note_here">Enter note here</string>
+    <string name="submit">Submit</string>
 </resources>
