--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="vikas">Vikas</string>
     <string name="enter_note_here">Enter note here</string>
     <string name="submit">Submit</string>
+    <string name="note_app">NOTE APP</string>
 </resources>
